replace classes in header and in about and contacts sections

--- a/index.html
+++ b/index.html
@@ -12,42 +12,42 @@
 <div class="content">
     <div class="wrapper container">
         <div class="header">
-            <div class="header--img"><img src="img/photo.jpg" alt="my photo" class="header--img__photo"></div>
+            <div class="header__img"><img src="img/photo.jpg" alt="my photo" class="header__photo"></div>
             <div class="header__name">Лонский Дмитрий</div>
-            <div class="header--position"><span class="header--position__post">Начинающий Front-end разработчик</span></div>
+            <div class="header__position"><span class="header__post">Начинающий Front-end разработчик</span></div>
         </div>
         <div class="main row">
-            <div class="main--item main--item--left col-lg-4 ">
-                <div class="main--item--about">
-                    <h2 class="main--item--about__title title">О себе</h2>
-                    <p class="main--item--about__text text">
+            <div class="main__item col-lg-4 ">
+                <div class="main__about about">
+                    <h2 class="about__title title">О себе</h2>
+                    <p class="about__text text">
                         В 2018 году окончил Белорусскую Государственную Академию Искусств по специальности Звукорежиссер кино и телевидения. Во время учебы попал на сьемочную площадку и начал работать звукооператором и ассистентом звукооператора. В связи с пандемией, а также политическим и экономическим кризисом, работы стало значитально меньше. В связи с этим я решил полностью изменить свою жизнь и поменять профессию, поэтому записался на курсы Front-end разработчика.
                     </p>
                 </div>
-                <div class="main--item--contacts">
-                    <div class="main--item--contacts--element">
-                        <i class="fas fa-phone"></i>
-                        <div class="main--item--contacts--element__title">Телефон:</div>
-                        <a href="tel:+375447520562" target="_blank" class="main--item--contacts--element__link">+375(44)752-05-62</a>
+                <div class="main__contacts contacts">
+                    <div class="contacts__element">
+                        <i class="fas fa-phone contacts__icon"></i>
+                        <div class="contacts__title">Телефон:</div>
+                        <a href="tel:+375447520562" target="_blank" class="contacts__link">+375(44)752-05-62</a>
                     </div>
-                    <div class="main--item--contacts--element">
-                        <i class="fas fa-at"></i>
-                        <div class="main--item--contacts--element__title">Почта:</div>
-                        <a href="mailto:mylastdayd@gmail.com" target="_blank" class="main--item--contacts--element__link">mylastdayd@gmail.com</a>
+                    <div class="contacts__element">
+                        <i class="fas fa-at contacts__icon"></i>
+                        <div class="contacts__title">Почта:</div>
+                        <a href="mailto:mylastdayd@gmail.com" target="_blank" class="contacts__link">mylastdayd@gmail.com</a>
                     </div>
-                    <div class="main--item--contacts--element">
-                        <i class="fab fa-telegram-plane"></i>
-                        <div class="main--item--contacts--element__title">Телеграм:</div>
-                        <a href="https://t.me/lonine" target="_blank" class="main--item--contacts--element__link">Лонский Дмитрий</a>
+                    <div class="contacts__element">
+                        <i class="fab fa-telegram-plane contacts__icon"></i>
+                        <div class="contacts__title">Телеграм:</div>
+                        <a href="https://t.me/lonine" target="_blank" class="contacts__link">Лонский Дмитрий</a>
                     </div>
-                    <div class="main--item--contacts--element">
-                        <i class="fab fa-github"></i>
-                        <div class="main--item--contacts--element__title">GitHub:</div>
-                        <a href="https://github.com/LoNine" target="_blank" class="main--item--contacts--element__link">github.com</a>
+                    <div class="contacts__element">
+                        <i class="fab fa-github contacts__icon"></i>
+                        <div class="contacts__title">GitHub:</div>
+                        <a href="https://github.com/LoNine" target="_blank" class="contacts__link">github.com</a>
                     </div>
                 </div>
             </div>
-            <div class="main--item main--item--right col-lg-8 ">
+            <div class="main__item col-lg-8 ">
                 <div class="main--item--filmography">
                     <div class="main--item--filmography__title title">Фильмография</div>
                     <div class="main--item--filmography--accordion accordion" id="accordion">
